OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/Chuzo_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to store all the different chuzo settings. (PER-2248)</description>
    <label>Chuzo Settings</label>
</CustomObject>