OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Brightspeed_Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Brightspeed_Partner_ID__c</fullName>
    <description>Unique Identifier for PV Sales</description>
    <label>Brightspeed Partner ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>