OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Chuzo_Terms_Public_Page_Path__c.field-meta.xml
<CustomField>
    <fullName>Chuzo_Terms_Public_Page_Path__c</fullName>
    <description>This setting stores the path for Chuzo terms and conditions public page and it’s used on Poe_lwcBuyflowDirecTvEngaTermsTab to build the link that’s sent to the client.</description>
    <label>Chuzo T&amp;C Public Page Path</label>
    <length>100</length>
    <type>Text</type>
</CustomField>