OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Concierge_Lost_Status__c.field-meta.xml
<CustomField>
    <fullName>Concierge_Lost_Status__c</fullName>
    <description>Concierge Status when the Lead is Closed Lost [PER-4479]</description>
    <label>Concierge Lost Status</label>
    <length>120</length>
    <type>Text</type>
</CustomField>