OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Concierge_Won_Status__c.field-meta.xml
<CustomField>
    <fullName>Concierge_Won_Status__c</fullName>
    <description>Concierge Status when the Lead is Closed Won [PER-</description>
    <label>Concierge Won Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>