OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Create_Rep_Flow_Email_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Create_Rep_Flow_Email_Suffix__c</fullName>
    <description>The environment name for the current environment as an email suffix (e.g. &quot;.poedev&quot;, &quot;.poeqa&quot;, &quot;.poe&quot;).</description>
    <label>Create Rep Flow Email Suffix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>