OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Create_Rep_Flow_Reset_Password_URL__c.field-meta.xml
<CustomField>
    <fullName>Create_Rep_Flow_Reset_Password_URL__c</fullName>
    <description>The password reset URL for the current environment.</description>
    <label>Create Rep Flow Reset Password URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>