OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/DTV_Environment__c.field-meta.xml
<CustomField>
    <fullName>DTV_Environment__c</fullName>
    <label>DTV Environment</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>