OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/DTV_Parallel_MDU_Flag__c.field-meta.xml
<CustomField>
    <fullName>DTV_Parallel_MDU_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PER-4779</description>
    <label>DTV Parallel MDU Flag</label>
    <type>Checkbox</type>
</CustomField>