OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/DTV_Roadrunner_Project__c.field-meta.xml
<CustomField>
    <fullName>DTV_Roadrunner_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[PER-4278] Activates Roadrunner project for the DTV Flow</description>
    <label>DTV Roadrunner Project</label>
    <type>Checkbox</type>
</CustomField>