OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Earthlink_Promo_Codes__c.field-meta.xml
<CustomField>
    <fullName>Earthlink_Promo_Codes__c</fullName>
    <description>Stores Earthlink promo codes separated by semicolons (&quot;;&quot;). (PER-2443)</description>
    <inlineHelpText>Stores Earthlink promo codes separated by semicolons (&quot;;&quot;).</inlineHelpText>
    <label>Earthlink Promo Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>