OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Excluded_Products_Earthlink__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Products_Earthlink__c</fullName>
    <description>List of product codes to exclude from the Chuzo application on an Earthlink buy flow. Separate the values with a comma. (,) (PER-2528)</description>
    <label>Excluded Products Earthlink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>