OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Frontier_Default_User__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Default_User__c</fullName>
    <description>Frontier Default PID (PER-2787)</description>
    <label>Frontier Default User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>