OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Frontier_Quote_Resume_Project__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Quote_Resume_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Frontier Quote Resume development flag [PER-1203]</description>
    <label>Frontier Quote Resume Project</label>
    <type>Checkbox</type>
</CustomField>