OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/FSL_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>FSL_Dealer_Code__c</fullName>
    <description>Field used to store the Dealer Code used in DIRECTV FSL buy flows. (PER-2735)</description>
    <label>FSL Dealer Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>