OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/FSL_Work_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>FSL_Work_Type_Id__c</fullName>
    <description>Field used to store the id of the Work Type record used in Service Appointments created through Chuzo. (PER-2735)</description>
    <label>FSL Work Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>