OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Limits_Alert_Emails__c.field-meta.xml
<CustomField>
    <fullName>Limits_Alert_Emails__c</fullName>
    <description>Comma separated email list with the recipients of the email alerts sent by the limit monitoring scheduled process.</description>
    <label>Limits Alert Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>