OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Recaptcha_API_URL__c.field-meta.xml
<CustomField>
    <fullName>Recaptcha_API_URL__c</fullName>
    <label>Recaptcha API URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>