OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/ReCaptcha_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>ReCaptcha_Secret_Key__c</fullName>
    <label>ReCaptcha Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>