OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/ReCaptcha_Site_Key__c.field-meta.xml
<CustomField>
    <fullName>ReCaptcha_Site_Key__c</fullName>
    <description>Includes the Site Key for the reCAPTCHA v3 site. (PER-5694)</description>
    <label>ReCaptcha Site Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>