OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Redirection_Enabled_Partners__c.field-meta.xml
<CustomField>
    <fullName>Redirection_Enabled_Partners__c</fullName>
    <description>Comma-separated list of partners that have the redirection feature enabled for Self Service.</description>
    <inlineHelpText>Comma-separated list of partners that have the redirection feature enabled for Self Service.</inlineHelpText>
    <label>Redirection Enabled Partners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>