OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Referral_Code_Programs__c.field-meta.xml
<CustomField>
    <fullName>Referral_Code_Programs__c</fullName>
    <defaultValue>&quot;Brightspeed;Earthlink;Frontier;Home Security;Kinetic;Optimum;Spectrum&quot;</defaultValue>
    <description>Contains a semicolon separated list of available programs that can be displayed in the Self Service landing page. (PER-5694)</description>
    <label>Referral Code Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>