OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Self_Service_Statistics_Archive__c.field-meta.xml
<CustomField>
    <fullName>Self_Service_Statistics_Archive__c</fullName>
    <description>Number of days after which the statistics records are archived. (PER-1874)</description>
    <inlineHelpText>Number of days after which the statistics records are archived.</inlineHelpText>
    <label>Self Service Statistics Archive</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>