OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Spectrum_Self_Service_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Spectrum_Self_Service_Site_Id__c</fullName>
    <description>Stores the ID used in the Spectrum Self Service URL [PER-4718]</description>
    <label>Spectrum Self Service Site Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>