OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Spectrum_Store_ID__c.field-meta.xml
<CustomField>
    <fullName>Spectrum_Store_ID__c</fullName>
    <label>Spectrum Store ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>