OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/VPN_Detection_Tool_API_Key__c.field-meta.xml
<CustomField>
    <fullName>VPN_Detection_Tool_API_Key__c</fullName>
    <description>API Key for in the VPN detection tool used during Chuzo logins. (PER-5307)</description>
    <inlineHelpText>API Key for in the VPN detection tool used during Chuzo logins.</inlineHelpText>
    <label>VPN Detection Tool API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>