OnboardingV2Minimal/force-app/main/default/objects/Chuzo_Settings__c/fields/Windstream_Vendor_Id__c.field-meta.xml
<CustomField>
    <fullName>Windstream_Vendor_Id__c</fullName>
    <description>Vendor ID for WST Payment Portal [PER-3695]</description>
    <label>Windstream Vendor Id</label>
    <length>4</length>
    <type>Text</type>
</CustomField>